traces/bug_264.txt
src/fflib/lex.cpp:237: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


src/fflib/lex.cpp:237:3: Write of unused value
235.     buf[1]=nc;
236.     buf[2]=0;
237.     int ret = c;
         ^
238.     if (c == EOF) 
239.       { 
